# learn-actix-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/: Cargo.toml
api/src/: lib.rs
api/src/core/: config.rs
entity/: Cargo.toml
entity/src/: mod.rs  organize.rs  prelude.rs  real_property.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20240407_094039_create_real_property_table.rs  m20240407_103025_create_organize_table.rs  m20240410_032754_insert_sample_user.rs
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  startup.rs
src/middleware/: auth.rs
src/modules/auth/: controller.rs  mod.rs  service.rs
src/modules/auth/dto/: sign_in.rs
