[package]
name = "learn-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[lib]
path = "./src/lib.rs"
name = "lib"

[dependencies]
actix-web = "4"
sea-orm = "0.12.15"
dotenvy = "0.15.7"
migration = { path = "./migration" }
entity = { path = "./entity" }
validator = { version = "0.18.0", features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-log = "0.2"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.10"
chrono = "0.4.37"