[package]
name = "learn-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[lib]
path = "./src/lib.rs"
name = "lib"

[dependencies]
actix-web = "4.5.1"
sea-orm = "0.12.15"
dotenvy = "0.15.7"
migration = { path = "./migration" }
entity = { path = "./entity" }
validator = { version = "0.18.0", features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.37"
futures-util = "0.3.3"
futures-macro = "0.3.30"
env_logger = "0.11.3"
