[package]
name = "learn-actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
migration = { path = "../migration" }
validator = { version = "0.18.0", features = ["derive"] } 
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
